About Section created

--- a/index.html
+++ b/index.html
@@ -46,16 +46,46 @@
 
       <div class="right">
         <div class="img-div">
-            <img src="./img/sis.jpg" alt="An image of Mabinty" width="400px">
+          <img src="./img/sis.jpg" alt="An image of Mabinty" width="400px" />
         </div>
       </div>
     </section>
 
     <!-- about Section -->
-     <section class="about">
-      <div class="left-div">
-        <h2></h2>
+    <section class="about">
+      <div class="left-wrapper">
+        <h2>About Me</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+          unde quidem vel quisquam, obcaecati consequuntur aspernatur aliquam
+          voluptatem. Veritatis, esse temporibus distinctio nihil, delectus
+          possimus, cum nam nobis quibusdam molestiae sapiente velit rerum
+          dolorem similique itaque qui autem architecto eveniet modi. Illo,
+          recusandae architecto, quidem et ad veniam provident minima libero ab
+          doloremque praesentium. Architecto, nemo praesentium, necessitatibus
+          veritatis nobis mollitia, quod reiciendis recusandae impedit sequi
+          atque? Deserunt facilis eveniet qui quod veritatis. Molestiae
+          provident odit, dolores mollitia et debitis magnam ducimus nam illum
+          expedita perferendis quasi amet consequuntur ratione neque
+          exercitationem excepturi soluta explicabo labore, inventore reiciendis
+          sapiente natus eum? Quas explicabo mollitia amet rerum voluptatem
+          soluta quo ducimus quia laudantium minima? Quas quo temporibus quidem
+          facere dolor molestias perspiciatis quisquam, vel necessitatibus non
+          cumque facilis distinctio deleniti voluptas quam perferendis, alias
+          dolore nulla, suscipit repellendus aliquid. Accusamus ad cumque
+          adipisci maxime, laborum fugit nulla ab dolores consequatur sed
+          cupiditate quasi vero placeat animi. Sequi facilis soluta optio
+          mollitia? Molestias temporibus sint laudantium sed doloremque nostrum
+          sapiente optio earum unde consectetur, illum necessitatibus
+          voluptatum, quisquam officia architecto commodi libero! Possimus
+          quaerat eos veniam.
+        </p>
+        <a href="#"><button>Hire Me</button></a>
       </div>
-     </section>
+
+      <div class="right-wrapper">
+        <img src="#" alt="#">
+      </div>
+    </section>
   </body>
 </html>
