Added changes and styled the About section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&family=Righteous&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/5507142bb7.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -54,6 +58,15 @@
     <!-- about Section -->
     <section class="about">
       <div class="left-wrapper">
+        <img
+          src="./img/WhatsApp Image 2024-09-27 at 22.01.54_0d602476.jpg"
+          alt="#"
+          width="450px"
+        />
+        
+      </div>
+
+      <div class="right-wrapper">
         <h2>About Me</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
@@ -62,29 +75,25 @@
           possimus, cum nam nobis quibusdam molestiae sapiente velit rerum
           dolorem similique itaque qui autem architecto eveniet modi. Illo,
           recusandae architecto, quidem et ad veniam provident minima libero ab
-          doloremque praesentium. Architecto, nemo praesentium, necessitatibus
-          veritatis nobis mollitia, quod reiciendis recusandae impedit sequi
-          atque? Deserunt facilis eveniet qui quod veritatis. Molestiae
-          provident odit, dolores mollitia et debitis magnam ducimus nam illum
-          expedita perferendis quasi amet consequuntur ratione neque
-          exercitationem excepturi soluta explicabo labore, inventore reiciendis
-          sapiente natus eum? Quas explicabo mollitia amet rerum voluptatem
-          soluta quo ducimus quia laudantium minima? Quas quo temporibus quidem
-          facere dolor molestias perspiciatis quisquam, vel necessitatibus non
-          cumque facilis distinctio deleniti voluptas quam perferendis, alias
-          dolore nulla, suscipit repellendus aliquid. Accusamus ad cumque
-          adipisci maxime, laborum fugit nulla ab dolores consequatur sed
-          cupiditate quasi vero placeat animi. Sequi facilis soluta optio
-          mollitia? Molestias temporibus sint laudantium sed doloremque nostrum
-          sapiente optio earum unde consectetur, illum necessitatibus
-          voluptatum, quisquam officia architecto commodi libero! Possimus
-          quaerat eos veniam.
+          dolort consequuntur ratione neque exercitationem excepturi soluta
+          explicabo labore, inventore reiciendis sapiente natus perspiciatis
+          quisquam, vel necessitatibus non cumque facilis distinctio deleniti
+          voluptas quam perferendis, alias dolore nulla, suscipit repellendus
+          aliquid. Accusamus ad cumque adipisci maxime, laborum fugit nulla ab
+          dolores consequatur sed cupiditate quasi vero placeat animi. Sequi
+          facilis soluta optio mollitia? Molestias temporibus sint laudantium
+          sed doloremque nostrum sapiente optio earum unde consectetur, illum
+          necessitatibus voluptatum, quisquam officia architecto commodi libero!
+          Possimus quaerat eos veniam.
         </p>
         <a href="#"><button>Hire Me</button></a>
-      </div>
 
-      <div class="right-wrapper">
-        <img src="#" alt="#">
+        <div class="icons">
+          <i class="fa-brands fa-instagram fa-2xl" style="color: rgb(60, 0, 112);"></i>
+          <i class="fa-brands fa-tiktok fa-2xl" style="color: rgb(60, 0, 112);"></i>
+          <i class="fa-brands fa-facebook fa-2xl" style="color: rgb(60, 0, 112);"></i>
+          <i class="fa-brands fa-whatsapp fa-2xl" style="color: rgb(60, 0, 112);"></i>
+        </div>
       </div>
     </section>
   </body>
