created a services section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     ></script>
   </head>
   <body>
+    <!-- Header -->
     <header>
       <a href="#">em<span>two</span></a>
       <nav class="nav-bar">
@@ -30,8 +31,9 @@
       </nav>
     </header>
 
+    <!-- Hero Section -->
     <section class="hero">
-      <div class="wrapper">
+      <div class="hero-wrapper">
         <h1>Hi, i'm Mabinty</h1>
         <h2>Fashion Designer</h2>
 
@@ -57,15 +59,16 @@
 
     <!-- about Section -->
     <section class="about">
+      <!-- Left Wrapper (about) -->
       <div class="left-wrapper">
         <img
           src="./img/WhatsApp Image 2024-09-27 at 22.01.54_0d602476.jpg"
           alt="#"
           width="450px"
         />
-        
       </div>
 
+      <!-- Right Wrapper (about) -->
       <div class="right-wrapper">
         <h2>About Me</h2>
         <p>
@@ -88,12 +91,68 @@
         </p>
         <a href="#"><button>Hire Me</button></a>
 
+        <!-- Icons div -->
         <div class="icons">
-          <i class="fa-brands fa-instagram fa-2xl" style="color: rgb(60, 0, 112);"></i>
-          <i class="fa-brands fa-tiktok fa-2xl" style="color: rgb(60, 0, 112);"></i>
-          <i class="fa-brands fa-facebook fa-2xl" style="color: rgb(60, 0, 112);"></i>
-          <i class="fa-brands fa-whatsapp fa-2xl" style="color: rgb(60, 0, 112);"></i>
+          <i
+            class="fa-brands fa-instagram fa-2xl"
+            style="color: rgb(60, 0, 112)"
+          ></i>
+          <i
+            class="fa-brands fa-tiktok fa-2xl"
+            style="color: rgb(60, 0, 112)"
+          ></i>
+          <i
+            class="fa-brands fa-facebook fa-2xl"
+            style="color: rgb(60, 0, 112)"
+          ></i>
+          <i
+            class="fa-brands fa-whatsapp fa-2xl"
+            style="color: rgb(60, 0, 112)"
+          ></i>
         </div>
+      </div>
+    </section>
+
+    <!-- Services Section -->
+    <section class="services">
+      <div class="services-wrapper">
+        <!-- Fashion area -->
+        <div class="area" id="fashion">
+          <div class="f-img-div">
+            <img src="./" alt="" />
+          </div>
+
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+
+        <!-- Middle png image -->
+        <div class="mid-img-div">
+          <img src="" alt="">
+        </div>
+
+        <!-- makeup area -->
+         <div class="area" id="makeup">
+          <div class="f-img-div">
+            <img src="./" alt="" />
+          </div>
+
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+         </div>
+        <!-- makeup area -->
+        <div class="area" id="makeup"></div>
       </div>
     </section>
   </body>
