Styled the Services section and created a portfolio section

--- a/index.html
+++ b/index.html
@@ -115,45 +115,65 @@
 
     <!-- Services Section -->
     <section class="services">
+
+      <h2>Services</h2>
       <div class="services-wrapper">
         <!-- Fashion area -->
         <div class="area" id="fashion">
-          <div class="f-img-div">
-            <img src="./" alt="" />
+          <div class="a-img-div" id="fsh">
+            <img src="./img/fashion black.jpeg" alt="" width="200px"/>
           </div>
 
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Bridal shower dress</li>
+            <li>Evening dress</li>
+            <li>Corporate Outfits</li>
+            <li>Corset dress</li>
+            <li>Bubu gowns</li>
+            <li>Asoebi outfits</li>
           </ul>
+
+          <div class="a-img-div" id="fsh">
+            <img src="./img/Men's Fashion.jpeg" alt="" width="200px"/>
+          </div>
         </div>
 
         <!-- Middle png image -->
         <div class="mid-img-div">
-          <img src="" alt="">
+          <img src="./img/WhatsApp Image 2024-09-27 at 20.38.39_4aaf76090.png" alt="">
         </div>
 
         <!-- makeup area -->
          <div class="area" id="makeup">
-          <div class="f-img-div">
-            <img src="./" alt="" />
+          <div class="a-img-div" id="mkp">
+            <img src="./img/Makeup afro 2023.jpeg" alt="" width="200px"/>
           </div>
 
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Bridal glam</li>
+            <li>Traditional wedding</li>
+            <li>HD makeup</li>
+            <li>Mineral makeup</li>
           </ul>
+
+          <div class="a-img-div" id="mkp">
+            <img src="./img/mkup.jpeg" alt="" width="200px"/>
+          </div>
+          </div>
         </div>
-         </div>
-        <!-- makeup area -->
-        <div class="area" id="makeup"></div>
       </div>
     </section>
+
+    <!-- Portfolio Section -->
+     <section class="portfolio">
+      <div class="container">
+        <h2>My Portfolio</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, aspernatur?
+        </p>
+
+
+      </div>
+     </section>
   </body>
 </html>
