First image grid showing work created

--- a/index.html
+++ b/index.html
@@ -172,7 +172,21 @@
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, aspernatur?
         </p>
 
-
+        <!-- grid -->
+         <div class="grid">
+          <img src="./img/WhatsApp Image 2024-09-27 at 22.01.54_0d602476.jpg" alt="" width="400px">
+          
+          <div class="mini-imgs">
+            <div id="1">
+            <img src="./img/Makeup afro 2023.jpeg" alt="" width="200px">
+            <img src="./img/Makeup afro 2023.jpeg" alt="" width="200px">
+          </div>
+          <div id="2">
+            <img src="./img/Makeup afro 2023.jpeg" alt="" width="200px">
+            <img src="./img/Makeup afro 2023.jpeg" alt="" width="200px">
+          </div>
+          </div>
+         </div>
       </div>
      </section>
   </body>
