Created a three colums section shoeing clients' reviews

--- a/index.html
+++ b/index.html
@@ -189,5 +189,29 @@
          </div>
       </div>
      </section>
+
+     <section class="reviews">
+      <div class="container">
+        <img src="" alt="">
+        <h3>John Doe</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, nesciunt!
+        </p>
+      </div>
+      <div class="container">
+        <img src="" alt="">
+        <h3>John Doe</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, nesciunt!
+        </p>
+      </div>
+      <div class="container">
+        <img src="" alt="">
+        <h3>John Doe</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, nesciunt!
+        </p>
+      </div>
+     </section>
   </body>
 </html>
