Styled the Reviews section

--- a/index.html
+++ b/index.html
@@ -191,27 +191,31 @@
      </section>
 
      <section class="reviews">
-      <div class="container">
-        <img src="" alt="">
-        <h3>John Doe</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, nesciunt!
-        </p>
-      </div>
-      <div class="container">
-        <img src="" alt="">
-        <h3>John Doe</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, nesciunt!
-        </p>
-      </div>
-      <div class="container">
-        <img src="" alt="">
-        <h3>John Doe</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, nesciunt!
-        </p>
-      </div>
-     </section>
+      
+       <div class="container">
+         <img src="./img/man-1.jpeg" alt="" width="105px">
+         <h3>John Doe</h3>
+         <span>12 September, 2025</span>
+         <p>
+           Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit. Numquam, nesciunt!
+         </p>
+       </div>
+       <div class="container">
+         <img src="./img/man-1.jpeg" alt="" width="105px">
+         <h3>John Doe</h3>
+         <span>12 September, 2025</span>
+         <p>
+           Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit. Numquam, nesciunt!
+         </p>
+       </div>
+       <div class="container">
+         <img src="./img/man-1.jpeg" alt="" width="105px">
+         <h3>John Doe</h3>
+         <span>12 September, 2025</span>
+         <p>
+           Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit. Numquam, nesciunt!
+         </p>
+       </div>
+    </section>
   </body>
 </html>
