--- a/index.html
+++ b/index.html
@@ -196,8 +196,10 @@
 
      <!-- Reviews Section -->
      <section class="reviews">
-      <h2>Reviews</h2>
-       <div class="container">
+       <div class="reviews-wrapper">
+        <h2>Reviews</h2>
+       <div class="cards-wrapper">
+         <div class="container">
          <img src="./img/man-1.jpeg" alt="" width="105px">
          <h3>John Zhaing</h3>
          <span>12 September, 2025</span>
@@ -221,12 +223,15 @@
            Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit. Numquam, nesciunt!
          </p>
        </div>
+       </div>
+       </div>
     </section>
 
     <!-- Contact Me Section -->
      <section class="contact-me">
+      <h2>CONTACT ME</h2>
       <div class="cm-wrapper">
-        <!-- right div -->
+        <!-- Left div -->
         <div class="left-div">
           <img src="./img/Maby_1.jpg" alt="" width="105px">
          <h2>Mabinty Mansaray</h2>
@@ -310,7 +315,7 @@
 
      <!-- footer -->
       <footer>
-        
+        <p>All rights reserved. &copy; Classic 2025</p>
       </footer>
   </body>
 </html>
