Increased the height of the 'contact me' divs

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <div class="left-div">
           <img src="./img/Maby_1.jpg" alt="" width="105px">
          <h2>Mabinty Mansaray</h2>
-         <h3>Fashion designer and makeup artist</h3>
+         <h3>Fashion designer</h3>
          <p>
            Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit. Numquam, nesciunt!
          </p>
@@ -306,7 +306,7 @@
               <br>
               <textarea id="message" placeholder="Type your message here"
               cols="77"
-              rows="9"></textarea>
+              rows="7"></textarea>
             </div>
           </form>
          </div>
