Added a submitt button to the form

--- a/index.html
+++ b/index.html
@@ -308,6 +308,8 @@
               cols="77"
               rows="7"></textarea>
             </div>
+
+            <a href="#">Submitt</a>
           </form>
          </div>
       </div>
