Entirely changed the portfolio section

--- a/index.html
+++ b/index.html
@@ -166,32 +166,56 @@
 
     <!-- Portfolio Section -->
      <section class="portfolio">
-      <div class="container">
-        <h2>My Portfolio</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, aspernatur?
-        </p>
-
-        <!-- grid -->
-         <div class="grid">
-          
-        <div class="mini-imgs">
-          <div class="makeup">
-            <div id="d-1">
-            <img src="./img/Makeup afro 2023.jpeg" alt="" width="200px">
-            <img src="./img/mkp_1.jpg" alt="" width="200px">
-            <br>
-            <img src="./img/Makeup afro 2023.jpeg" alt="" width="200px">
-            <img src="./img/mkp_2.jpg" alt="" width="200px">
+        <div class="container">
+          <h2>My Portfolio</h2>
+          <div class="left-p-div">
+            <h2>Your Style, Your Story</h2>
+            <p>
+              Where fashion meets art, beauty transforms, and creativity speaks louder.
+            </p>
+            <img src="./img/fashion black.jpeg" alt="" width="400px">
           </div>
-          </div>
-          <div id="d-2">
-            <img src="./img/right-img_1.jpg" alt="" width="310px">
-            <img src="./img/right-img_1.jpg" alt="" width="310px">
-          </div>
+          <div class="right-p-div">
+            <!-- Top div -->
+            <div class="top-div">
+              <div class="card">
+                <img src="" alt="">
+                <h3>jdslkf</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus consequuntur, architecto non animi ea reiciendis dolor molestiae laboriosam eos vel.
+                </p>
+                <a href="#">View Service</a>
+              </div>
+              <div class="card">
+                <img src="" alt="">
+                <h3>jdslkf</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus consequuntur, architecto non animi ea reiciendis dolor molestiae laboriosam eos vel.
+                </p>
+                <a href="#">View Service</a>
+              </div>
+            </div>
+            <!-- Bottom div -->
+             <div class="bottom-div">
+              <div class="card">
+                <img src="" alt="">
+                <h3>jdslkf</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus consequuntur, architecto non animi ea reiciendis dolor molestiae laboriosam eos vel.
+                </p>
+                <a href="#">View Service</a>
+              </div>
+              <div class="card">
+                <img src="" alt="">
+                <h3>jdslkf</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus consequuntur, architecto non animi ea reiciendis dolor molestiae laboriosam eos vel.
+                </p>
+                <a href="#">View Service</a>
+              </div>
+             </div>
           </div>
         </div>
-      </div>
      </section>
 
      <!-- Reviews Section -->
