Styled the updated portfolio section

--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
 
     <!-- Portfolio Section -->
      <section class="portfolio">
-        <div class="container">
-          <h2>My Portfolio</h2>
+        <div id="container">
           <div class="left-p-div">
             <h2>Your Style, Your Story</h2>
             <p>
@@ -180,17 +179,17 @@
             <div class="top-div">
               <div class="card">
                 <img src="" alt="">
-                <h3>jdslkf</h3>
+                <h3>BRIDAL GLAM</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus consequuntur, architecto non animi ea reiciendis dolor molestiae laboriosam eos vel.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 </p>
                 <a href="#">View Service</a>
               </div>
               <div class="card">
                 <img src="" alt="">
-                <h3>jdslkf</h3>
+                <h3>TRADITIONAL</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus consequuntur, architecto non animi ea reiciendis dolor molestiae laboriosam eos vel.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 </p>
                 <a href="#">View Service</a>
               </div>
@@ -199,17 +198,17 @@
              <div class="bottom-div">
               <div class="card">
                 <img src="" alt="">
-                <h3>jdslkf</h3>
+                <h3>BUBU GOWNS</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus consequuntur, architecto non animi ea reiciendis dolor molestiae laboriosam eos vel.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 </p>
                 <a href="#">View Service</a>
               </div>
               <div class="card">
                 <img src="" alt="">
-                <h3>jdslkf</h3>
+                <h3>EVENING DRESS</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus consequuntur, architecto non animi ea reiciendis dolor molestiae laboriosam eos vel.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 </p>
                 <a href="#">View Service</a>
               </div>
