Added a button that allows viewing of all services

--- a/index.html
+++ b/index.html
@@ -204,7 +204,8 @@
                 
                 <a href="#">View Service</a>
               </div>
-             </div>
+            </div>
+            <a href="#" id="portfolio-button">View all</a>
           </div>
         </div>
      </section>
