Created a portfolio page

--- a/index.html
+++ b/index.html
@@ -205,7 +205,9 @@
                 <a href="#">View Service</a>
               </div>
             </div>
-            <a href="#" id="portfolio-button">View all</a>
+            <div class="view-all">
+              <a href="#" id="portfolio-button">View all</a>
+            </div>
           </div>
         </div>
      </section>
