Linked both pages

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               </div>
             </div>
             <div class="view-all">
-              <a href="#" id="portfolio-button">View all</a>
+              <a href="./portfolio.html" id="portfolio-button">View all</a>
             </div>
           </div>
         </div>
