--- a/portfolio.html
+++ b/portfolio.html
@@ -11,9 +11,7 @@
       <p>Lorem ipsum dolor sit amet.</p>
 
       <!-- Makeup Section -->
-       <div class="makeup-sec">
-        
-       </div>
+      <div class="makeup-sec"></div>
     </main>
   </body>
 </html>
