addedd the first section of images to the portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>emtwo | Portfolio</title>
+    <link rel="stylesheet" href="./portfolio.css" />
   </head>
   <body>
     <main>
@@ -11,7 +12,20 @@
       <p>Lorem ipsum dolor sit amet.</p>
 
       <!-- Makeup Section -->
-      <div class="makeup-sec"></div>
+      <div class="makeup-sec">
+        <div class="top">
+          <div><img src="./img/Makeup afro 2023.jpeg" alt="" width="200px" /></div>
+          <div><img src="./img/Makeup afro 2023.jpeg" alt="" width="200px" /></div>
+          <div><img src="./img/Makeup afro 2023.jpeg" alt="" width="200px" /></div>
+          <div><img src="./img/Makeup afro 2023.jpeg" alt="" width="200px" /></div>
+        </div>
+        <div class="bottom">
+          <div><img src="./img/Makeup afro 2023.jpeg" alt="" width="200px" /></div>
+          <div><img src="./img/Makeup afro 2023.jpeg" alt="" width="200px" /></div>
+          <div><img src="./img/Makeup afro 2023.jpeg" alt="" width="200px" /></div>
+          <div><img src="./img/Makeup afro 2023.jpeg" alt="" width="200px" /></div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
